main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,15 @@
 @import "base/helpers";
 
 // Components
-/
+@import "components/forms";
+@import "components/buttons";
+@import "components/icons";
+@import "components/tables";
+@import "components/menus";
+@import "components/grids";
+@import "components/cards";
+@import "components/inverse";
+@import "components/banner";
 
 // Layouts
 @import "layouts/site";
