main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@
 @import "base/reset";
 @import "base/base";
 @import "base/helpers";
-/* 
+
 // Components
 @import "components/forms";
 @import "components/buttons";
@@ -19,7 +19,7 @@
 @import "components/grids";
 @import "components/cards";
 @import "components/inverse";
-@import "components/banner"; */
+@import "components/banner";
 
 // Layouts
 @import "layouts/site";
