main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@
 @import "base/base";
 @import "base/helpers";
 
-//* / Components
+// Components
 @import "components/forms";
 @import "components/buttons";
 @import "components/icons";
@@ -19,12 +19,12 @@
 @import "components/grids";
 @import "components/cards";
 @import "components/inverse";
-@import "components/banner"; */
+@import "components/banner";
 
-// Layouts
+/* // Layouts
 @import "layouts/site";
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/post-page";
-@import "layouts/section";
+@import "layouts/section"; */
 
