main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,10 +21,10 @@
 @import "components/inverse";
 @import "components/banner";
 
-/* // Layouts
+// Layouts
 @import "layouts/site";
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/post-page";
-@import "layouts/section"; */
+@import "layouts/section";
 
