--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,10 @@
 ---
 ---
-
+/* 
 // Abstracts
 @import "abstracts/mixins";
 @import "abstracts/variables";
-
+ */
 // Base
 @import "base/reset";
 @import "base/base";
