--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $color-text:                   #536171 !default;
 $color-heading:                #282f36 !default;
 $color-meta:                   #8594a5 !default;
 $color-bg:                     #fff !default;
-$color-bg-alt:                 #f5f6f7 !default;
+$color-bg-alt:                 #000000 !default;
 $color-bg-overlay:             rgba(245,246,247,.8) !default;
 $color-border:                 #e1e4e9 !default;
 
