_variables.scss: changed

--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -31,7 +31,7 @@ $color-nav-link-active:        #28aaff !default;
 
 // Inverse (light text on dark background)
 $color-inverse-text:           #f5f6f7 !default;
-$color-inverse-heading:        #fff !default;
+$color-inverse-heading:        rgb(32, 32, 32) !default;
 $color-inverse-bg:             #005bc4 !default;
 $color-inverse-link:           #f5f6f7 !default;
 $color-inverse-btn:            #fff !default;
