--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -29,7 +29,7 @@ $color-nav-link:               #536171 !default;
 $color-nav-link-hover:         #28aaff !default;
 $color-nav-link-active:        #28aaff !default;
 
-// Inverse (light text on dark background)
+// Inverse (light tedarkxt on  background)
 $color-inverse-text:           #f5f6f7 !default;
 $color-inverse-heading:        #fff !default;
 $color-inverse-bg:             #005bc4 !default;
